dark mode bug fix

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
 }
 
 #root {
-    height: 100vh;
+    height: 100%;
     background-color: whitesmoke;
 }
 
